# axum-web-dev

./: .gitignore  Cargo.toml  README.md  file-upload.rest  route_group_test.rest  test.rest  tracing_logging.rest
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/domain/: Cargo.toml
crates/error-handling/: Cargo.toml
crates/error-handling/src/: lib.rs  main.rs  router.rs
crates/file-upload/: Cargo.toml
crates/file-upload/src/: errors.rs  main.rs  router.rs
crates/handler-test/: Cargo.toml
crates/handler-test/src/: main.rs  router.rs
crates/middleware/: Cargo.toml
crates/middleware/src/: lib.rs  main.rs  mid.rs  router.rs
crates/request-extractor/: Cargo.toml
crates/request-extractor/src/: main.rs  router.rs
crates/route-group/: Cargo.toml
crates/route-group/src/: errors.rs  main.rs  router.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/share-state/: Cargo.toml
crates/share-state/src/: main.rs  router.rs  state.rs
crates/tls-support/: Cargo.toml
crates/tls-support/src/: main.rs
crates/tracing-logging/: Cargo.toml
crates/tracing-logging/src/: lib.rs  main.rs  observe.rs  router.rs
crates/websocket/: Cargo.toml  index.html
crates/websocket/src/: lib.rs  main.rs  ws.rs
