[package]
name = "share-state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
redis = { version = "1.2.2", features = ["connection-manager", "tokio-comp"] }
axum = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
